<resources>
    <string name="app_name">My Application</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="login_please">Login Please</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="log_in">Log In</string>
    <string name="new_user_sign_up_here">New User? Sign up here</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user">New User ?</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="follow_the_steps">Follow the steps :</string>
    <string name="enter_your_email_registered">Enter Your Email Registered</string>
</resources>