<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forgot_Password">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/centerline3"
        android:layout_centerInParent="true">
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@+id/centerline3"
        android:layout_marginBottom="120dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/follow_the_steps"
            android:textColor="@color/black"
            android:textSize="23sp">

        </TextView>

    </LinearLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@+id/centerline3"
        android:autofillHints=""
        android:id="@+id/forgotpassword"
        android:hint="@string/enter_your_email_registered"
        android:layout_marginBottom="10dp"
        android:inputType="textEmailAddress"
        tools:ignore="TextFields">

    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Click Here"
        android:background="@color/white"
        android:textColor="@color/white"
        android:layout_below="@+id/centerline3"
        android:id="@+id/passwordrecoverbutton"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

    </Button>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="Login Screen"
        android:id="@+id/gobacktologin"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="20sp"
        >

    </TextView>
</RelativeLayout>