<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    tools:context=".SignUp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/centerline2"
        android:layout_centerInParent="true">
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@id/centerline2"
        android:layout_marginBottom="150dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textColor="#FF5722"
            android:textSize="42sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome"
            android:textColor="#FF4081"
            android:textSize="23sp">

        </TextView>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/centerline2"
        android:layout_marginBottom="10dp"
        android:id="@+id/email"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <EditText
            android:id="@+id/signupemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColorHint="#546E7A"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize,TextContrastCheck">

        </EditText>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/centerline2"
        android:layout_marginTop="10dp"
        android:id="@+id/password"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:passwordToggleEnabled="true"
        >

        <EditText
            android:id="@+id/signuppassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="50dp"
            android:autofillHints=""
            android:hint="@string/enter_your_password"

            android:textColorHint="#546E7A"
            tools:ignore="TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize,TextContrastCheck">

        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_design"
        android:layout_below="@+id/password"
        android:id="@+id/signup"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:text="@string/sign_up"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            >

        </TextView>


    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Log in"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        android:layout_below="@+id/signup"
        android:id="@+id/gotologin"
        android:layout_marginTop="70dp">

    </TextView>

</RelativeLayout>